--- a/login.html
+++ b/login.html
@@ -10,7 +10,7 @@
         <div class="main">
             <h1> login
                 <button>
-                    <label for="">taikhoan</label>
+                    <label for="">login</label>
                     <textarea name="" id="">pass</textarea>
                 </button>
                 <button>login</button>
